zerocopy-derive/tests/ui/struct.stderr
error: unsupported on types with type parameters
  --> $DIR/struct.rs:14:10
   |
14 | #[derive(AsBytes)]
   |          ^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> $DIR/struct.rs:23:1
   |
23 | / #[repr(C, align(2))]
24 | | struct Unaligned1;
   | |__________________^

error: cannot derive Unaligned with repr(align(N > 1))
  --> $DIR/struct.rs:27:1
   |
27 | / #[repr(transparent, align(2))]
28 | | struct Unaligned2 {
29 | |     foo: u8,
30 | | }
   | |_^

error: cannot derive Unaligned with repr(align(N > 1))
  --> $DIR/struct.rs:33:1
   |
33 | / #[repr(packed, align(2))]
34 | | struct Unaligned3;
   | |__________________^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/struct.rs:27:8
   |
27 | #[repr(transparent, align(2))]
   |        ^^^^^^^^^^^  ^^^^^^^^

error[E0587]: type has conflicting packed and align representation hints
  --> $DIR/struct.rs:34:1
   |
34 | struct Unaligned3;
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0692`.
